import sys
from PyQt5.QtWidgets import QApplication, QMainWindow, QWidget
from PyQt5.uic import loadUi
from PyQt5.QtCore import Qt

class MainWindow(QMainWindow):
    def __init__(self):
        super(MainWindow, self).__init__()

        # Загрузка интерфейса из файла .ui
        loadUi('mainsesign.ui', self)

        # Присоединение действий к слотам (функциям)
        self.actionOpen.triggered.connect(self.open_data)
        self.actionSave.triggered.connect(self.save_data)
        self.actionExit.triggered.connect(self.close)
        self.actionSettings.triggered.connect(self.show_settings)
        self.actionAbout.triggered.connect(self.show_about)
        self.actionManual.triggered.connect(self.show_manual)
        # self.toolButtonAddRecord.clicked.connect(self.show_add_record_form)
        #self.toolButtonAnalysis.clicked.connect(self.show_analysis_form)

    def open_data(self):
        # Логика для открытия данных из файла
        pass

    def save_data(self):
        # Логика для сохранения данных в файл
        pass

    def show_settings(self):
        # Логика для отображения формы настроек
        pass

    def show_about(self):
        # Логика для отображения информации о программе
        pass

    def show_manual(self):
        # Логика для отображения инструкции пользователя
        pass

    def show_add_record_form(self):
        # Логика для отображения формы добавления записи
        pass

    def show_analysis_form(self):
        # Логика для отображения формы анализа
        pass

if __name__ == '__main__':
    app = QApplication(sys.argv)
    window = MainWindow()
    window.show()
    sys.exit(app.exec_())
